kubernates/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: ivolve
spec:
  ports:
    - port: 80        
      protocol: TCP
      targetPort: 8081 
  selector:
    app: myapp        
  type: ClusterIP
